[package]
authors = ["Davide Di Carlo <daddinuz@gmail.com>"]
description = "A heap-allocated, fixed-capacity, variable-size array, no_std compatible."
name = "cap_vec"
version = "0.1.0"
edition = "2024"
license = "MIT"
keywords = ["array", "collections", "list", "vec", "heap"]
rust-version = "1.85"
repository = "https://github.com/daddinuz/cap_vec"
